@@ -1,6 +1,7 @@
 {{$NEXT}}
   - Support reading request body parameters from multipart/form-data requests
   - Add uploads, upload_names, upload, and upload_array methods to support multipart/form-data file uploads
+  - Add body_parts method to return raw multipart/form-data parts
   - Add set_request_body_buffer and set_multipart_form_charset methods
 
 0.006     2021-04-25 14:48:30 EDT
